--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             <button type="button" class="btn fondoBoton" id="btnConsultar">Consultar Pokemón</button>
         </form>
     </div>
-    
+
+    <div class="container my-5" id="imgPokemon">
+        <div id="contenedorImagen">
+    </div>
+
     <!-- chartContainer => son los gráficos -->
     <div class="container" id="graficoUno" style="height: 370px; width: 100%;"></div>
 
